// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upsert activity 1`] = `
Array [
  Object {
    "text": "Hello, World!",
    "type": "message",
  },
]
`;

exports[`Upsert activity 2`] = `
Array [
  Object {
    "payload": Object {
      "activity": Object {
        "text": "Hello, World!",
        "type": "message",
      },
    },
    "type": "DIRECT_LINE/UPSERT_ACTIVITY",
  },
]
`;
